<resources>
    <string name="app_name">范范</string>
    <string name="agree_app_protocol">我同意&#12298;范范用户使用协议&#12299;</string>
    <string name="app_protocol">范范用户使用协议</string>

    <string name="home">首页</string>
    <string name="find">发现</string>
    <string name="topic">话题</string>
    <string name="me">我的</string>

    <string name="attention">关注</string>
    <string name="choice">精选</string>
    <string name="news">新闻</string>
    <string name="dynamic">动态</string>

    <string name="funny_circle">圈子</string>
    <string name="talent">达人</string>
    <string name="activity">活动</string>

    <string name="login">登录</string>
    <string name="un_login">未登录</string>
    <string name="next">下一步</string>
    <string name="login_mobile">手机号登录</string>
    <string name="mobile_number">手机号</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="weixin">微信</string>
    <string name="sina">新浪微博</string>
    <string name="QQ">腾讯QQ</string>
    <string name="register">注册</string>
    <string name="china_code">+86</string>
    <string name="register_mobile">手机号注册</string>
    <string name="register_password">设置密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="back_password">找回密码</string>
    <string name="agree">同   意</string>
    <string name="ok">确定</string>
    <string name="reset_password">重设密码</string>
    <string name="select_photo">选择图片</string>
    <string name="choose">选择</string>
    <string name="publish_post">发帖</string>
    <string name="publish">发布</string>
    <string name="anonymous">匿名</string>
    <string name="photo">图片</string>
    <string name="video">视频</string>
    <string name="tip">提示</string>
    <string name="abandon">放弃</string>
    <string name="cancel">取消</string>
    <string name="select_post_type">选择吧</string>
    <string name="loading">正在加载中……</string>
    <string name="loading_fail">加载失败</string>
    <string name="loading_empty">暂无数据</string>
    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="fan">粉丝</string>
    <string name="score">积分</string>
    <string name="location">位置</string>
    <string name="post">帖子</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="un_select">未选择</string>
    <string name="save">保存</string>

    <string name="hint_mobile_number">填写手机号</string>
    <string name="hint_password">填写密码</string>
    <string name="hint_password_number">填写密码(最多24个字符)</string>
    <string name="hint_confirm_password">再次填写密码</string>
    <string name="hint_verification_code">填写验证码</string>
    <string name="hint_nickname">请填写您的昵称</string>
    <string name="hint_signature">请填写您的个性签名</string>

    <string name="digits_password">.@*?!_#/=;%$()\{}-0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>

    <string name="tip_confirm_password_diff">两次输入密码不一致</string>
    <string name="tip_verification_code_invalid">验证码错误</string>
    <string name="tip_verification_code_send">验证码已发送，请注意查收</string>
    <string name="tip_success_reset_password">设置密码成功</string>
    <string name="tip_fail_reset_password">设置密码失败</string>
    <string name="tip_success_register">注册成功</string>
    <string name="tip_success_login">登录成功</string>
    <string name="tip_fail_login">登录失败</string>
    <string name="tip_post_type_w">只支持文字</string>
    <string name="tip_post_type_p">只支持图片</string>
    <string name="tip_post_type_v">只支持视频</string>
    <string name="tip_post_type_g">只支持gif</string>
    <string name="tip_post_type_wp">只支持文字、图片</string>
    <string name="tip_post_type_wv">只支持文字、视频</string>
    <string name="tip_post_type_wg">只支持文字、gif</string>
    <string name="tip_post_type_pv">只支持图片、视频</string>
    <string name="tip_post_type_pg">只支持图片、gif</string>
    <string name="tip_post_type_vg">只支持视频、gif</string>
    <string name="tip_post_type_wpv">只支持文字、图片、视频</string>
    <string name="tip_post_type_pvg">只支持图片、视频、gif</string>
    <string name="tip_illegal_request">请求不合法</string>
    <string name="tip_please_login">请先登录</string>
    <string name="tip_request_error">请求失败</string>
    <string name="tip_request_out_time">请求超时</string>
    <string name="tip_request_cancel">请求取消</string>
    <string name="tip_unkown_error">未知错误</string>

    <string name="toast_nickname_not_null">昵称不能为空</string>
    <string name="toast_nickname_update_success">昵称设置成功</string>
    <string name="toast_signature_update_success">签名设置成功</string>
    <string name="toast_sex_update_success">性别设置成功</string>

    <string name="dialog_upload_avatar">正在上传头像...</string>
    <string name="dialog_abandon_edit">放弃编辑？</string>

    <string name="format_second">%1$d秒</string>
    <string name="format_photo_ok">确定(%1$s)</string>
    <string name="format_photo_picker_max">最多只能选择 %1$d 张图片</string>
    <string name="format_remain_word">还剩 %1$d 个字</string>
    <string name="format_permission_error">请打开-%1$s-权限，以软件的正常使用</string>

    <string name="permission_storage">读写手机存储</string>
    <string name="permission_camera">相机</string>

    <string name="me_interaction">我的互动</string>
    <string name="me_collection">我的收藏</string>
    <string name="me_message">我的消息</string>
    <string name="setting">设置</string>
    <string name="personal_information">个人信息</string>
    <string name="me_attention">我的关注</string>
    <string name="me_fan">我的粉丝</string>

    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="app_account">范范号</string>
    <string name="sex">性别</string>
    <string name="address">地址</string>
    <string name="signature">个性签名</string>

    <string name="format_app_account">范范号：%1$s</string>
    <string name="format_signature">个性签名：%1$s</string>
    <string name="format_default_nickname">用户%1$s</string>

    <string name="publishing">发布中</string>
    <string name="publish_fail">发布失败</string>
    <string name="publish_checking">审核中</string>
    <string name="publish_check_fail">审核失败</string>
    <string name="publish_check_success">已审核</string>
</resources>
