<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/bar_input"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/password_tv"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_et"
            style="@style/bar_input_et"
            android:digits="@string/digits_password"
            android:hint="@string/hint_password_number"
            android:inputType="textPassword"
            android:maxLength="24" />

    </LinearLayout>

    <View style="@style/line_division_horizontal" />

    <LinearLayout style="@style/bar_input">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/confirm_password_et"
            style="@style/bar_input_et"
            android:digits="@string/digits_password"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:maxLength="24" />
    </LinearLayout>

    <View style="@style/line_division_horizontal" />

    <LinearLayout style="@style/bar_input">

        <EditText
            android:id="@+id/verification_code_et"
            style="@style/bar_input_et"
            android:layout_width="0dp"
            android:layout_weight="0.93"
            android:hint="@string/hint_verification_code"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:id="@+id/get_verification_code_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:background="@drawable/verification_code_selector"
            android:gravity="center"
            android:text="@string/get_verification_code"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/next_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/main_btn_selector"
        android:enabled="false"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>