<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View style="@style/line_division_horizontal" />

    <LinearLayout
        android:id="@+id/info_avatar_ll"
        style="@style/me_bar_style"
        android:layout_height="80dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/me_bar_main_textStyle"
            android:text="@string/avatar" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/info_avatar_iv"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
    </LinearLayout>

    <View style="@style/line_division_horizontal" />

    <LinearLayout
        android:id="@+id/info_account_ll"
        style="@style/me_bar_style">

        <TextView
            style="@style/me_bar_main_textStyle"
            android:text="@string/app_account" />

        <TextView
            android:id="@+id/info_app_account_tv"
            style="@style/me_info_bar_content_textStyle" />
    </LinearLayout>

    <View style="@style/line_division_horizontal" />

    <LinearLayout
        android:id="@+id/info_nickname_ll"
        style="@style/me_bar_style">\

        <TextView
            style="@style/me_bar_main_textStyle"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/info_nickname_tv"
            style="@style/me_info_bar_content_textStyle" />
    </LinearLayout>

    <View style="@style/line_division_horizontal" />

    <LinearLayout
        android:id="@+id/info_sex_ll"
        style="@style/me_bar_style">

        <TextView
            style="@style/me_bar_main_textStyle"
            android:text="@string/sex" />

        <TextView
            android:id="@+id/info_sex_tv"
            style="@style/me_info_bar_content_textStyle" />
    </LinearLayout>

    <View style="@style/line_division_horizontal" />

    <LinearLayout
        android:id="@+id/info_address_ll"
        style="@style/me_bar_style">

        <TextView
            style="@style/me_bar_main_textStyle"
            android:text="@string/address" />

        <TextView
            android:id="@+id/info_address_tv"
            style="@style/me_info_bar_content_textStyle" />
    </LinearLayout>

    <View style="@style/line_division_horizontal" />

    <LinearLayout
        android:id="@+id/info_signature_ll"
        style="@style/me_bar_style">

        <TextView
            style="@style/me_bar_main_textStyle"
            android:text="@string/signature" />

        <TextView
            android:id="@+id/info_signature_tv"
            style="@style/me_info_bar_content_textStyle" />
    </LinearLayout>

</LinearLayout>