<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/me_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/me_head_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/me_info_ll"
                style="@style/common_panel_module_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/me_nickname_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/font_black"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/me_app_account_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/font_gray"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/me_address_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/font_gray"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/me_avatar_iv"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/me_signature_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/font_gray"
                    android:textSize="13sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/me_unLogin_tv"
                style="@style/common_panel_module_style"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/un_login"
                android:textColor="@color/main"
                android:textSize="28sp" />
        </FrameLayout>

        <View style="@style/line_division_horizontal" />

        <LinearLayout
            style="@style/common_panel_module_style"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/me_attention_ll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/me_attention_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textColor="@color/font_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/attention"
                    android:textColor="@color/font_gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/me_fan_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/me_fan_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textColor="@color/font_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/fan"
                    android:textColor="@color/font_gray" />
            </LinearLayout>

        </LinearLayout>

        <View style="@style/line_division_horizontal" />

        <LinearLayout
            android:id="@+id/me_interaction_ll"
            style="@style/me_bar_style"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/interaction" />

            <TextView
                style="@style/me_bar_main_textStyle"
                android:text="@string/me_interaction" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/more_skip" />
        </LinearLayout>

        <View style="@style/line_division_horizontal" />

        <LinearLayout
            android:id="@+id/me_collection_ll"
            style="@style/me_bar_style">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/collection" />

            <TextView
                style="@style/me_bar_main_textStyle"
                android:text="@string/me_collection"
                android:id="@+id/textView4" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/more_skip" />
        </LinearLayout>

        <View style="@style/line_division_horizontal" />

        <LinearLayout
            android:id="@+id/me_message_ll"
            style="@style/me_bar_style">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/message" />

            <TextView
                style="@style/me_bar_main_textStyle"
                android:text="@string/me_message" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/more_skip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/me_setting_ll"
            style="@style/me_bar_style"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/setting" />

            <TextView
                style="@style/me_bar_main_textStyle"
                android:text="@string/setting" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/more_skip" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>