<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_publish_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/publish_content_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/content_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:gravity="top|left"
                android:hint="输入内容"
                android:minLines="5"
                android:padding="5dp"
                android:textSize="16sp" />

            <cn.com.wh.photo.photopicker.widget.PTSortableNinePhotoLayout
                android:id="@+id/ptSortableNinePhotoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:snpl_itemWidth="90dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/remain_word_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="14sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/select_type_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/select_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="选择吧"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:gravity="center"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/photo_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawablePadding="2dp"
                android:drawableTop="@drawable/phone"
                android:gravity="center_horizontal"
                android:paddingRight="10dp"
                android:text="@string/photo"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/video_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/photo_tv"
                android:drawablePadding="2dp"
                android:drawableTop="@drawable/phone"
                android:gravity="center_horizontal"
                android:paddingRight="10dp"
                android:text="@string/video"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/anonymous_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/anonymous_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/agree_protocol_check_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anonymous"
                    android:textSize="16sp" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>